--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <button #addtask>Add Task</button>
-    <button #exec>Execute</button>
+    <button #exec>Start</button>
+    <button #config>Configurations</button>
     <plaintext #log></plaintext>
 </body>
 </html>
