--- a/task.html
+++ b/task.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task</title>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="task.js"></script>
 </head>
 <body>
     <button #addtask>Add Task</button>
