--- a/task.html
+++ b/task.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  style="width: 400dip; height: 300dip;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,15 @@
     <script type="module" src="task.js"></script>
 </head>
 <body>
-    <button #addtask>Add Task</button>
-    <button #exec>Execute</button>
-    <plaintext></plaintext>
+    <table>
+        <tr><td>Enabled:</td><td><input #enabled type="checkbox"/></td></tr>
+        <tr><td>id:</td><td><label #id></label></td></tr>
+        <tr><td>src:</td><td><input #src type="text"/><button #browse>...</button></td></tr>
+        <tr><td>dst:</td><td><input #dst type="text"/></td></tr>
+        <tr><td>auth:</td><td><select #auth></select> </td></tr>
+        <tr><td>params:</td><td><input #params type="text"/></td></tr>
+    </table>
+    <button #ok>OK</button>
+    <button #cancel>Cancel</button>
 </body>
 </html>
