--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <table>
         <thead>
-          <th style="width:10px">enabled</th>
+          <th style="width:10px">direction</th>
           <th style="width:10px">id</th>
           <th style="width:*">src</th>
           <th style="width:*">dst</th>
-          <th style="width:100px">auth</th>
+          <th style="width:200px">auth</th>
           <th style="width:100px">params</th>
         </thead>
         <tbody></tbody>
