--- a/task.html
+++ b/task.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <table>
-        <tr><td>Enabled:</td><td><input #enabled type="checkbox"/></td></tr>
+        <tr><td>Enabled:</td><td><input #enabled type="checkbox" mixed/></td></tr>
         <tr><td>id:</td><td><label #id></label></td></tr>
         <tr><td>src:</td><td><input #src type="text"/><button #browse>...</button></td></tr>
         <tr><td>dst:</td><td><input #dst type="text"/></td></tr>
