--- a/wconfig.html
+++ b/wconfig.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width: 400dip; height: 300dip;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Configurations</title>
     <link rel="stylesheet" href="styles.css">
     
-    <script type="module" src="globalcfg.js">
+    <script type="module" src="wconfig.js">
     </script>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div>Auths:</div>
     <table><thead><th style="width:10dip">id</th><th style="width:60dip">type</th><th style="width:*">host</th><th style="width:*">user</th></thead>
     <tbody></tbody></table>
-    <button id="ok">OK</button>
-    <button id="cancel">Cancel</button>
+    <button #ok>OK</button>
+    <button #cancel>Cancel</button>
 </body>
 </html>
