--- a/wtask.html
+++ b/wtask.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"  style="width: 400dip; height: 300dip;">
+<html lang="en"  style="width: 600dip; height: 400dip;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task</title>
-    <script type="module" src="task.js"></script>
+    <script type="module" src="wtask.js"></script>
 </head>
 <body>
     <table>
-        <tr><td>Enabled:</td><td><input #enabled type="checkbox" mixed/></td></tr>
+        <tr><td>Enabled:</td><td><input #enabled type="checkbox"/></td></tr>
         <tr><td>ID:</td><td><label #id></label></td></tr>
         <tr><td>Src:</td><td><input #src type="text"/><button #browse>...</button></td></tr>
         <tr><td>Dst:</td><td><input #dst type="text"/></td></tr>
         <tr><td>Auth:</td><td><select #auth></select> </td></tr>
-        <tr><td>Exclude File:</td><td><input #exclude type="text"/><button #browseexclude>...</button></td></tr>
+        <tr><td>Exclude:</td><td><textarea #exclude type="text"/><button #import>Import</button><button #export>Save As</button></td></tr>
         <tr><td>Params:</td><td><input #params type="text"/></td></tr>
     </table>
     <button #ok>OK</button>
