--- a/wtask.html
+++ b/wtask.html
@@ -15,7 +15,7 @@
         <tr><td>Dst:</td><td><input #dst type="text"/></td></tr>
         <tr><td>Auth:</td><td><select #auth></select> </td></tr>
         <tr><td>Exclude:</td><td><textarea #exclude type="text"/><button #import>Import</button><button #export>Save As</button></td></tr>
-        <tr><td>Params:</td><td><input #params type="text"/></td></tr>
+        <tr><td>Params:</td><td><input #params type="text"/><button #swch>>></button></td></tr>
     </table>
     <button #ok>OK</button>
     <button #cancel>Cancel</button>
