--- a/wconfig.html
+++ b/wconfig.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" .wconfig>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,18 +7,14 @@
     <title>Configurations</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="wconfig.js"></script>
-    <style>
-        *{margin:0;}
-        table { style-set:customtable1;} 
-    </style>
+    <style> *{margin:0;} </style>
 </head>
-
 <body>
     <div .wconfigmian>
         <div .authslist>
             <div.keybox><b>SSH Key folder:</b> <span #sshroot></span> <button .btn .linebtn #btngen>Generate</button> </div>
             <span><b>Auths:</b> <button .btn .linebtn #newauth><i .i_add />New</button> </span>
-            <table style="height: 250dip;margin-top:4dip;">
+            <table .configtable>
                 <thead>
                     <th value="1">ID</th>
                     <th value="2">Type</th>
