--- a/wtask.html
+++ b/wtask.html
@@ -7,9 +7,7 @@
     <title>Task</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="wtask.js"></script>
-    <style>
-        *{margin:0;}
-    </style>
+    <style> *{margin:0;} </style>
 </head>
 <body>
     <div.taskmian>
@@ -19,7 +17,7 @@
         <li><span>Dst:</span> <input .ipt #dst type="text"/></li>
         <li><span.a>Auth:</span> <select #auth></select></li>
         <li>
-            <span.b>Exclude:</span> <textarea #exclude type="text"/>
+            <div.h-flow><span.b>Exclude:</span> <textarea #exclude type="text"/></div>
             <p><button .btn .linebtn #import><i .i_import/>Import</button> <button .btn .linebtn #export><i .i_save/>Save As</button></p>
         </li>
         <li><span>Params:</span> <input .ipt #params type="text"/><button .btn .greybtn #swch>Set >></button></li>
