--- a/wconfig.html
+++ b/wconfig.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" .wconfig>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,63 @@
     <title>Configurations</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="wconfig.js"></script>
-    <style> *{margin:0;} </style>
+    <style>
+        * {
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
     <div .wconfigmian>
         <div .authslist>
-            <div.keybox><b>SSH Key folder:</b> <span #sshroot></span> <button .btn .linebtn #btngen>Generate</button> </div>
-            <span><b>Auths:</b> <button .btn .linebtn #newauth><i .i_add />New</button> </span>
-            <table .configtable>
-                <thead>
-                    <th value="1">ID</th>
-                    <th value="2">Type</th>
-                    <th value="3">Host</th>
-                    <th value="4">User</th>
-                    <th value="5">Password</th>
-                    <th value="6">Ops</th>
-                </thead>
-                <tbody></tbody>
-            </table>
+            <div.keybox><b>SSH Key folder:</b> <span #sshroot></span> <button .btn .linebtn #btngen>Generate</button>
         </div>
+        <span><b>Auths:</b> <button .btn .linebtn #newauth><i .i_add />New</button> </span>
+        <table .configtable>
+            <thead>
+                <th value="1">ID</th>
+                <th value="2">Type</th>
+                <th value="3">Host</th>
+                <th value="4">User</th>
+                <th value="5">Password</th>
+                <th value="6">Ops</th>
+            </thead>
+            <tbody #authtbl>
+                <tr data="a.id">
+                    <td #id>"a.id"</td>
+                    <td>
+                        <select id="itype" value={a.type}>
+                            <option>ssh</option>
+                            <option>local</option>
+                            <option>rsync</option>
+                        </select>
+                    </td>
+                    <td><input type="text" id="ihost" value="a.host"></input></td>
+                    <td><input id="iuser" value="a.user" /></td>
+                    <td><input type="password" id="ipasswd" value="a.passwd" /></td>
+                    <td><button title="Delete" .ibtn #rmauth><i .i_del /></button><button
+                            title="Install Key" .ibtn #insauth><i .i_istall /></button> <button title="Test"
+                            .ibtn #tstauth><i .i_test /></button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-        <div .modulelist>
-            <span><b>Daemon Config:</b> <button .btn .linebtn #newmodule><i .i_add/>New</button> </span>
-            <ul #modules></ul>
-        </div>
+    <div .modulelist>
+        <span><b>Daemon Config:</b> <button .btn .linebtn #newmodule><i .i_add />New</button> </span>
+        <ul #modules>
+            <li #daemonmodule data="idx"><input type="text" id="module" value="{m.module}" />
+                <input .urlipt type="text" id="path" value="{m.path}" /><button .btn .greybtn #browmodule
+                    data="idx">Select...</button>
+                <span><input type="checkbox" id="readonly" value="{m.readonly}" /> <label for="readonly">read
+                        only</label></span>
+                <span><input type="checkbox" id="writeonly" value="{m.writeonly}" /> <label for="writeonly">write
+                        only</label></span>
+                <button .ibtn #rmmodule data="idx"><i .i_del /></button>
+            </li>
+        </ul>
+    </div>
     </div>
 
     <div .dlgbtm>
@@ -38,4 +72,5 @@
         <button .btn .linebtn #cancel>Cancel</button>
     </div>
 </body>
+
 </html>
