--- a/src/main.htm
+++ b/src/main.htm
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yet Another RSync UI</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="index.js"></script>
+    <script type="module" src="main.js"></script>
 </head>
 <body>
   <frameset rows="*,200dip">
