--- a/src/wconfig.html
+++ b/src/wconfig.html
@@ -28,7 +28,7 @@
                 <th value="3">Host</th>
                 <th value="4">User</th>
                 <th value="5">Password</th>
-                <th value="6">Ops</th>
+                <th value="6">Actions</th>
             </thead>
             <tbody #authtbl>
                 <tr data="a.id">
