--- a/src/wtask.html
+++ b/src/wtask.html
@@ -14,7 +14,7 @@
         <li><span>Enabled:</span> <input #enabled type="checkbox"/></li>
         <li><span>ID:</span> <label #id></label></li>
         <li><span>Src:</span> <input .ipt #src type="text"/><button .btn .greybtn #browse>Select...</button></li>
-        <li><span>Dst:</span> <input .ipt #dst type="text"/></li>
+        <li><span>Dest:</span> <input .ipt #dst type="text"/></li>
         <li><span.a>Auth:</span> <select #auth></select></li>
         <li>
             <div.h-flow><span.b>Exclude:</span> <textarea #exclude type="text"/></div>
