--- a/src/main.htm
+++ b/src/main.htm
@@ -16,10 +16,10 @@
               <th value="1">Enable</th>
               <th value="2">ID</th>
               <th value="3">Src</th>
-              <th value="4">Dst</th>
+              <th value="4">Dest</th>
               <th value="5">Auth</th>
               <th value="6">Params</th>
-              <th value="7">Ops</th>
+              <th value="7">Actions</th>
             </thead>
             <tbody></tbody>
           </table>
