--- a/src/ui/wtask.html
+++ b/src/ui/wtask.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" .wtask>
+<html lang="en" window-width="800" window-height="600">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
