--- a/src/ui/wswitch.html
+++ b/src/ui/wswitch.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" .wswitch>
+<html lang="en" class="wswitch">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Switch</title>
+    <title>Switch Options — YARU</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="wswitch.js"></script>
-    <style>
-        *{margin:0;}
-    </style>
 </head>
 <body>
-    <div #switches></div>
-    <div .dlgbtm>
-        <button .btn .bluebtn #ok>OK</button>
-        <button .btn .linebtn #cancel>Cancel</button>
+    <div id="switches"></div>
+    <div class="dlgbtm">
+        <button class="btn bluebtn" id="ok">OK</button>
+        <button class="btn linebtn" id="cancel">Cancel</button>
     </div>
 </body>
-
 </html>
