--- a/src/ui/wconfig.html
+++ b/src/ui/wconfig.html
@@ -1,76 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" .wconfig>
-
+<html lang="en" class="wconfig">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configurations</title>
+    <title>Configuration — YARU</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="wconfig.js"></script>
-    <style>
-        * {
-            margin: 0;
-        }
-    </style>
 </head>
-
 <body>
-    <div .wconfigmian>
-        <div .authslist>
-            <div.keybox><b>SSH Key folder:</b> <span #sshroot></span> <button .btn .linebtn #btngen>Generate</button>
+    <div class="wconfigmian">
+        <div class="authslist">
+            <div class="keybox">
+                <b>SSH Key folder:</b>
+                <span id="sshroot"></span>
+                <button class="btn greybtn" id="btngen">Generate</button>
+            </div>
+            <span>
+                <b>Auths:</b>
+                <button class="btn linebtn" id="newauth"><i class="i_add"></i>New</button>
+            </span>
+            <!-- AuthTable component will be rendered here by ConfigDialog -->
         </div>
-        <span><b>Auths:</b> <button .btn .linebtn #newauth><i .i_add />New</button> </span>
-        <table .configtable>
-            <thead>
-                <th value="1">ID</th>
-                <th value="2">Type</th>
-                <th value="3">Host</th>
-                <th value="4">User</th>
-                <th value="5">Port</th>
-                <th value="6">Actions</th>
-            </thead>
-            <tbody #authtbl>
-                <tr data="a.id">
-                    <td #id>"a.id"</td>
-                    <td>
-                        <select id="itype" value={a.type}>
-                            <option>ssh</option>
-                            <option>local</option>
-                            <option>rsync</option>
-                        </select>
-                    </td>
-                    <td><input type="text" id="ihost" value="a.host"></input></td>
-                    <td><input id="iuser" value="a.user" /></td>
-                    <td><input type="text" id="port" value="a.port" /></td>
-                    <td><button title="Delete" .ibtn #rmauth><i .i_del /></button><button
-                            title="Install Key" .ibtn #insauth><i .i_istall /></button> <button title="Test"
-                            .ibtn #tstauth><i .i_test /></button></td>
-                </tr>
-            </tbody>
-        </table>
+
+        <!-- DaemonModuleList component will be rendered here by ConfigDialog -->
     </div>
 
-    <div .modulelist>
-        <span><b>Daemon Config:</b> <button .btn .linebtn #newmodule><i .i_add />New</button> </span>
-        <ul #modules>
-            <li #daemonmodule data="idx"><input type="text" id="module" value="{m.module}" />
-                <input .urlipt type="text" id="path" value="{m.path}" /><button .btn .greybtn #browmodule
-                    data="idx">Select...</button>
-                <span><input type="checkbox" id="readonly" value="{m.readonly}" /> <label for="readonly">read
-                        only</label></span>
-                <span><input type="checkbox" id="writeonly" value="{m.writeonly}" /> <label for="writeonly">write
-                        only</label></span>
-                <button .ibtn #rmmodule data="idx"><i .i_del /></button>
-            </li>
-        </ul>
-    </div>
-    </div>
-
-    <div .dlgbtm>
-        <button .btn .bluebtn #ok>OK</button>
-        <button .btn .linebtn #cancel>Cancel</button>
+    <div class="dlgbtm">
+        <button class="btn bluebtn" id="ok">OK</button>
+        <button class="btn linebtn" id="cancel">Cancel</button>
     </div>
 </body>
-
 </html>
