--- a/src/ui/wconfig.html
+++ b/src/ui/wconfig.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="wconfig">
+<html lang="en" window-width="850" window-height="650">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configuration — YARU</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="module" src="wconfig.js"></script>
+    <style>
+        html.wconfig {
+            flow: vertical;
+            padding: 20dip;
+            background: #f5f5f5;
+        }
+    </style>
 </head>
-<body>
-    <div class="wconfigmian">
-        <div class="authslist">
-            <div class="keybox">
-                <b>SSH Key folder:</b>
-                <span id="sshroot"></span>
-                <button class="btn greybtn" id="btngen">Generate</button>
-            </div>
-            <span>
-                <b>Auths:</b>
-                <button class="btn linebtn" id="newauth"><i class="i_add"></i>New</button>
-            </span>
-            <!-- AuthTable component will be rendered here by ConfigDialog -->
-        </div>
-
-        <!-- DaemonModuleList component will be rendered here by ConfigDialog -->
-    </div>
-
-    <div class="dlgbtm">
-        <button class="btn bluebtn" id="ok">OK</button>
-        <button class="btn linebtn" id="cancel">Cancel</button>
-    </div>
+<body class="wconfig">
+    <!-- ConfigDialog component will be rendered here -->
 </body>
 </html>
