--- a/src/ui/main.htm
+++ b/src/ui/main.htm
@@ -28,7 +28,8 @@
 
             <div class="btntoolbar">
                 <button class="btn linebtn onebtn" id="newtask"><i class="i_add"></i>New Task</button>
-                <label style="vertical-align: middle;"><input type="checkbox" id="dryrun" /> Dry Run</label>
+                <label style="vertical-align: middle;"><input type="checkbox" id="dryrun" /> Dry
+                    Run</label>
                 <button class="btn bluebtn" id="exec"><i class="i_start"></i>Start</button>
                 <span>|</span>
                 <button class="btn bluebtn" id="startserv"><i class="i_start"></i>Start Daemon</button>
