--- a/src/ui/main.htm
+++ b/src/ui/main.htm
@@ -27,7 +27,7 @@
             </div>
         </div>
         <splitter></splitter>
-        <terminal rows="200" />
+        <terminal rows="200" columns="300" />
     </frameset>
 </body>
 
